# rust-oracle

./: .env  .gitignore  Cargo.toml  README.md  teste.txt
src/: main.rs
src/minio/: services_minio.rs
src/repo/: mod.rs  repo_anexo.rs  repo_emprego.rs  repo_job.rs  repo_test.rs  repository.rs
src/services/: common.rs  services_ctl.rs  services_minio.rs  services_rusoto_s3.rs  services_s3.rs
