[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-oci = "0.2.0"
oracle = { version = "0.5", features = ["chrono"] }
dotenv = "0.15.0"
console = "0.15.7"
chrono = "0.4.26"
minio-rsc = "0.1.3"
futures = "0.3.28"
log2 = "0.1.7"
tokio = "1.28.2"

