[package]
name = "rust_oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = { version = "0.5", features = ["chrono"] }
dotenv = "0.15.0"
console = "0.15.7"
log2 = "0.1.7"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.18"
bytes = "1.4.0"
chrono = "0.4.30"